--- a/.github/workflows/deploy-terraform.yml
+++ b/.github/workflows/deploy-terraform.yml
@@ -27,9 +27,12 @@ jobs:
 
       - name: Terraform Init
         run: terraform init
+        working-directory: ./tf
 
       - name: Terraform Plan
         run: terraform plan
+        working-directory: ./tf
 
       - name: Terraform Apply
         run: terraform apply -auto-approve
+        working-directory: ./tf
