remove auto run from tf workflows on push to main branch

--- a/.github/workflows/deploy-terraform-plan.yml
+++ b/.github/workflows/deploy-terraform-plan.yml
@@ -1,10 +1,6 @@
-name: Deploy Terraform to Azure
+name: Deploy Terraform to Azure Plan
 
-on:
-  push:
-    branches:
-      - main  # Set your deployment branch here
-  pull_request:
+
 
 jobs:
   terraform:
