--- a/.github/workflows/deploy-terraform-apply.yml
+++ b/.github/workflows/deploy-terraform-apply.yml
@@ -1,10 +1,6 @@
-name: Deploy Terraform to Azure
+name: Deploy Terraform to Azure Apply
 
-on:
-  push:
-    branches:
-      - main  # Set your deployment branch here
-  pull_request:
+
 
 jobs:
   terraform:
