it the workflow, move the index.html from the html folder to the main

--- a/.github/workflows/main_cloudprogrammingproject-281141.yml
+++ b/.github/workflows/main_cloudprogrammingproject-281141.yml
@@ -58,6 +58,9 @@ jobs:
 
       - name: Unzip artifact for deployment
         run: unzip release.zip
+        run: rm release.zip
+        run: mv html/* .
+        run: rmdir html
       
       - name: Login to Azure
         uses: azure/login@v2
