--- a/.github/workflows/main_cloudprogrammingproject-281141.yml
+++ b/.github/workflows/main_cloudprogrammingproject-281141.yml
@@ -4,7 +4,7 @@
 name: Build and deploy PHP app to Azure Web App - cloudprogrammingproject-281141
 
 on:
-  push:
+  workflow_dispatch:
 
 jobs:
   build:
@@ -79,4 +79,3 @@ jobs:
           app-name: 'cloudprogrammingproject-281141'
           slot-name: 'Production'
           package: .
-          
