use a postfix instead of random number generation

--- a/.github/workflows/main_cloudprogrammingproject-281141.yml
+++ b/.github/workflows/main_cloudprogrammingproject-281141.yml
@@ -79,3 +79,6 @@ jobs:
           app-name: 'cloudprogrammingproject-281141'
           slot-name: 'Production'
           package: .
+      
+      - name: Set TF_VAR_postfix from secret
+        run: echo "TF_VAR_postfix=${{ secrets.RESOURCE_POSTFIX }}" >> $GITHUB_ENV
