--- a/.github/workflows/deploy-terraform-plan.yml
+++ b/.github/workflows/deploy-terraform-plan.yml
@@ -30,3 +30,6 @@ jobs:
       - name: Terraform Plan
         run: terraform plan
         working-directory: ./tf
+
+      - name: Set TF_VAR_postfix from secret
+        run: echo "TF_VAR_postfix=${{ secrets.RESOURCE_POSTFIX }}" >> $GITHUB_ENV
