--- a/.github/workflows/main_cloudprogrammingproject-281141.yml
+++ b/.github/workflows/main_cloudprogrammingproject-281141.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy PHP app to Azure Web App - cloudprogrammingproject-281141
+name: Build and deploy PHP app to Azure Web App
 
 on:
   workflow_dispatch:
@@ -76,7 +76,7 @@ jobs:
         uses: azure/webapps-deploy@v3
         id: deploy-to-webapp
         with:
-          app-name: 'cloudprogrammingproject-281141'
+          app-name: 'cloudprogrammingproject-${{ vars.RESOURCE_POSTFIX }}'
           slot-name: 'Production'
           package: .
       
