--- a/.github/workflows/deploy-terraform-apply.yml
+++ b/.github/workflows/deploy-terraform-apply.yml
@@ -23,8 +23,8 @@ jobs:
         with:
           terraform_version: '1.3.5'  # Update this to the version of Terraform you prefer
       
-      - name: Set TF_VAR_postfix from secret
-        run: echo "TF_VAR_postfix=${{ secrets.RESOURCE_POSTFIX }}" >> $GITHUB_ENV
+      - name: Set TF_VAR_postfix from variable
+        run: echo "TF_VAR_postfix=${{ vars.RESOURCE_POSTFIX }}" >> $GITHUB_ENV
 
       - name: Terraform Init
         run: terraform init
