--- a/.github/workflows/deploy-terraform-plan.yml
+++ b/.github/workflows/deploy-terraform-plan.yml
@@ -23,9 +23,13 @@ jobs:
         with:
           terraform_version: '1.3.5'  # Update this to the version of Terraform you prefer
       
-      - name: Set TF_VAR_postfix from variable
-        run: echo "TF_VAR_postfix=${{ vars.RESOURCE_POSTFIX }}" >> $GITHUB_ENV
-
+      - name: Set TF_VAR_postfix_eu from variable
+        run: echo "TF_VAR_postfix_eu=${{ vars.RESOURCE_POSTFIX_EU }}" >> $GITHUB_ENV
+      - name: Set TF_VAR_postfix_us from variable
+        run: echo "TF_VAR_postfix_us=${{ vars.RESOURCE_POSTFIX_US }}" >> $GITHUB_ENV
+      - name: Set TF_VAR_postfix_asia from variable
+        run: echo "TF_VAR_postfix_asia=${{ vars.RESOURCE_POSTFIX_ASIA }}" >> $GITHUB_ENV
+        
       - name: Terraform Init
         run: terraform init -backend-config="resource_group_name=tfstate" -backend-config="storage_account_name=tfstate28091" -backend-config="container_name=tfstate" -backend-config="key=terraform.tfstate" -backend-config="access_key=${{ secrets.AZURE_TFSTATE_STORAGE_ACCOUNT_KEY }}"
         working-directory: ./tf
