--- a/.github/workflows/main_cloudprogrammingproject-281141.yml
+++ b/.github/workflows/main_cloudprogrammingproject-281141.yml
@@ -65,12 +65,11 @@ jobs:
       - name: remove html directory
         run: rmdir html
 
-      - name: Login to Azure
+      - name: Azure Login
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZURE_APPDEPLOY_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_APPDEPLOY_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_APPDEPLOY_SUBSCRIPTION_ID }}
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
 
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v3
