--- a/.github/workflows/deploy-terraform-plan.yml
+++ b/.github/workflows/deploy-terraform-plan.yml
@@ -1,4 +1,4 @@
-name: Deploy Terraform to Azure Plan
+name: Deploy Terraform to Azure Apply
 
 on:
   workflow_dispatch:
@@ -12,7 +12,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Azure Login
-        uses: azure/login@v1
+        uses: azure/login@v2
         with:
           # Create a secret in your repository named AZURE_CREDENTIALS
           # that contains your Azure service principal credentials in JSON format.
@@ -30,16 +30,13 @@ jobs:
       - name: Set TF_VAR_postfix-asia from variable
         run: echo "TF_VAR_postfix-asia=${{ vars.RESOURCE_POSTFIX_ASIA }}" >> $GITHUB_ENV
       - name: Set TF_VAR_github_token from secret
-        env:
-          TF_VAR_github_token: ${{ secrets.GH_ACCESS_TOKEN }}
-        run: echo "set gh token"
+        run: echo "TF_VAR_github_token=${{ secrets.GH_ACCESS_TOKEN }}" >> $GITHUB_ENV
       - name: Set subsciption ID
         run: echo "TF_VAR_subscription_id=${{ vars.AZURE_SUBSCRIPTION_ID }}" >> $GITHUB_ENV
-        
+
       - name: Terraform Init
         run: terraform init -backend-config="resource_group_name=tfstate" -backend-config="storage_account_name=tfstate28091" -backend-config="container_name=tfstate" -backend-config="key=terraform.tfstate" -backend-config="access_key=${{ secrets.AZURE_TFSTATE_STORAGE_ACCOUNT_KEY }}" -backend-config="client_id=${{ secrets.AZURE_CLIENT_ID }}" -backend-config="client_secret=${{ secrets.AZURE_CLIENT_SECRET }}" -backend-config="tenant_id=${{ secrets.AZURE_APPDEPLOY_TENANT_ID}}" -backend-config="subscription_id=${{ secrets.AZURE_APPDEPLOY_SUBSCRIPTION_ID }}"
         working-directory: ./tf
-        
 
       - name: Terraform Plan
         run: terraform plan
