--- a/.github/workflows/deploy-terraform-plan.yml
+++ b/.github/workflows/deploy-terraform-plan.yml
@@ -3,7 +3,6 @@ name: Deploy Terraform to Azure Plan
 on:
   workflow_dispatch:
     
-
 jobs:
   terraform:
     runs-on: ubuntu-latest
@@ -14,14 +13,12 @@ jobs:
       - name: Azure Login
         uses: azure/login@v2
         with:
-          # Create a secret in your repository named AZURE_CREDENTIALS
-          # that contains your Azure service principal credentials in JSON format.
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: Set Up Terraform
         uses: hashicorp/setup-terraform@v2
         with:
-          terraform_version: '1.3.5'  # Update this to the version of Terraform you prefer
+          terraform_version: '1.3.5'
       
       - name: Set TF_VAR_github_token from secret
         run: echo "TF_VAR_github_token=${{ secrets.GH_ACCESS_TOKEN }}" >> $GITHUB_ENV
@@ -29,7 +26,23 @@ jobs:
         run: echo "TF_VAR_subscription_id=${{ vars.AZURE_SUBSCRIPTION_ID }}" >> $GITHUB_ENV
 
       - name: Terraform Init
-        run: terraform init -backend-config="resource_group_name=tfstate" -backend-config="storage_account_name=tfstate28091" -backend-config="container_name=tfstate" -backend-config="key=terraform.tfstate" -backend-config="access_key=${{ secrets.AZURE_TFSTATE_STORAGE_ACCOUNT_KEY }}" -backend-config="client_id=${{ secrets.AZURE_CLIENT_ID }}" -backend-config="client_secret=${{ secrets.AZURE_CLIENT_SECRET }}" -backend-config="tenant_id=${{ secrets.AZURE_APPDEPLOY_TENANT_ID}}" -backend-config="subscription_id=${{ secrets.AZURE_APPDEPLOY_SUBSCRIPTION_ID }}"
+        env:
+          ARM_CLIENT_ID: ${{ fromJson(secrets.AZURE_CREDENTIALS).clientId }}
+          ARM_CLIENT_SECRET: ${{ fromJson(secrets.AZURE_CREDENTIALS).clientSecret }}
+          ARM_TENANT_ID: ${{ fromJson(secrets.AZURE_CREDENTIALS).tenantId }}
+          ARM_SUBSCRIPTION_ID: ${{ fromJson(secrets.AZURE_CREDENTIALS).subscriptionId }}
+          TFSTATE_ACCESS_KEY: ${{ secrets.AZURE_TFSTATE_STORAGE_ACCOUNT_KEY }}
+        run: |
+          terraform init \
+            -backend-config="resource_group_name=tfstate" \
+            -backend-config="storage_account_name=tfstate28091" \
+            -backend-config="container_name=tfstate" \
+            -backend-config="key=terraform.tfstate" \
+            -backend-config="access_key=$TFSTATE_ACCESS_KEY" \
+            -backend-config="client_id=$ARM_CLIENT_ID" \
+            -backend-config="client_secret=$ARM_CLIENT_SECRET" \
+            -backend-config="tenant_id=$ARM_TENANT_ID" \
+            -backend-config="subscription_id=$ARM_SUBSCRIPTION_ID"
         working-directory: ./tf
 
       - name: Terraform Plan
